# google-hackathon

./: Home.py  README.md  pyproject.toml
app/: label_encoders.pkl  label_encoders_model2.pkl  load_db.py  main.py  ml_pipeline1.py  ml_pipeline2.py  test.py
pages/: Claim-Check.py  Claim-Value.py
