[project]
name = "google-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.11",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "streamlit>=1.43.2",
    "streamlit-lottie>=0.0.5",
    "supabase>=2.13.0",
    "uvicorn>=0.34.0",
]
